--- a/FSAE_Rules_2021_V1_files/navigation.css
+++ b/FSAE_Rules_2021_V1_files/navigation.css
@@ -2,12 +2,13 @@
 .nav > a, .top_nav > a, .toc > a
 {
 color: #663300;
-font-family: Arial, Helvetica, sans-serif;
+font-family: Calibri, Helvetica, sans-serif;
 font-size: 16px;
 font-weight: bold;
 background-color: white;
 cursor: pointer;
 text-decoration:none;
+padding: 10px;
 }
 .nav > a:hover, .top_nav > a:hover, .toc > a:hover
 {
@@ -17,20 +18,20 @@ text-decoration:underline;
 .toc0
 {
 display: block;
-margin-left: 15%
+margin-left: 15px
 }
 
 .toc1
 {
 display: block;
-margin-left: 30%
+margin-left: 30px
 }
 
 
 .toc2
 {
 display: block;
-margin-left: 45%
+margin-left: 45px
 }
 
 .toc > *:before
