--- a/FSAE_Rules_2021_V1_files/navigation.css
+++ b/FSAE_Rules_2021_V1_files/navigation.css
@@ -2,13 +2,12 @@
 .nav > a, .top_nav > a, .toc > a
 {
 color: #663300;
-font-family: Calibri, Helvetica, sans-serif;
+font-family: Arial, Helvetica, sans-serif;
 font-size: 16px;
 font-weight: bold;
 background-color: white;
 cursor: pointer;
 text-decoration:none;
-padding: 10px;
 }
 .nav > a:hover, .top_nav > a:hover, .toc > a:hover
 {
