--- a/FSAE_Rules_2021_V1_files/navigation.css
+++ b/FSAE_Rules_2021_V1_files/navigation.css
@@ -18,14 +18,16 @@ text-decoration:underline;
 {
 display: block;
 margin-left: 15px;
-text-align: center
+text-align: center;
+line-height:10px;
 }
 
 .toc1
 {
 display: block;
 margin-left: 30px;
-text-align: center
+text-align: center;
+line-height:10px;
 }
 
 
@@ -33,7 +35,8 @@ text-align: center
 {
 display: block;
 margin-left: 45px;
-text-align: center
+text-align: center;
+line-height:10px;
 }
 
 .toc > *:before
