--- a/FSAE_Rules_2021_V1_files/navigation.css
+++ b/FSAE_Rules_2021_V1_files/navigation.css
@@ -18,15 +18,16 @@ text-decoration:underline;
 {
 display: block;
 margin-left: 15px;
-text-align: center;
+text-align: left;
 line-height:10px;
+
 }
 
 .toc1
 {
 display: block;
 margin-left: 30px;
-text-align: center;
+text-align: left;
 line-height:10px;
 }
 
@@ -35,7 +36,7 @@ line-height:10px;
 {
 display: block;
 margin-left: 45px;
-text-align: center;
+text-align: left;
 line-height:10px;
 }
 
